@@ -1,6 +1,11 @@
 rpostgisLT 1.0
 ==============
 
+NEW FEATURES
+
+* `as_pgtraj`: new argument `tzone` allows for time zone specification, and 
+applies the database time zone if left NULL (formerly used the R time zone)
+
 OVERALL CHANGES
 
 * example datasets added (Roe deer GPS tracking dataset)
@@ -13,7 +18,7 @@ rpostgisLT 0.4 (Release date: 2016-11-01)
 
 ** INITIAL CRAN RELEASE **
 
-OVERALL CHANGE
+OVERALL CHANGES
 
 * Added handling of infolocs
 * Added support for Type I (no time recorded) trajectories
